--- a/packages/starlight/components/Badge.astro
+++ b/packages/starlight/components/Badge.astro
@@ -10,11 +10,11 @@ const { theme = 'blue' } = Astro.props;
 </span>
 <style>
 	span {
-		padding-inline: 0.5rem;
+		padding-inline: 0.375rem;
 		padding-block: 0.0625rem;
 		border-radius: 0.25rem;
 		font-family: var(--sl-font-system-mono);
-		margin-left: 0.125rem;
+		margin-inline-start: 0.125rem;
 		font-size: var(--sl-text-xs);
 		border: 1px solid;
 		font-weight: normal;
