Prefix class names that can conflict with Tailwind

--- a/packages/starlight/layout/TwoColumnContent.astro
+++ b/packages/starlight/layout/TwoColumnContent.astro
@@ -4,7 +4,7 @@ interface Props {
 }
 ---
 
-<div class="lg:flex">
+<div class="lg:sl-flex">
 	{
 		Astro.props.hasToC && (
 			<aside class="right-sidebar-container">
