--- a/packages/starlight/components/Search.astro
+++ b/packages/starlight/components/Search.astro
@@ -22,16 +22,16 @@ const pagefindTranslations = {
 			/* The span is `aria-hidden` because it is not shown on small screens. Instead, the icon label is used for accessibility purposes. */
 		}
 		<Icon name="magnifier" label={t('search.label')} />
-		<span class="hidden md:block" aria-hidden="true">{t('search.label')}</span>
-		<Icon name="forward-slash" class="hidden md:block" label={t('search.shortcutLabel')} />
+		<span class="sl-hidden md:sl-block" aria-hidden="true">{t('search.label')}</span>
+		<Icon name="forward-slash" class="sl-hidden md:sl-block" label={t('search.shortcutLabel')} />
 	</button>
 
 	<dialog style="padding:0" aria-label={t('search.label')}>
-		<div class="dialog-frame flex">
+		<div class="dialog-frame sl-flex">
 			{
 				/* TODO: Make the layout of this button flexible to accommodate different word lengths. Currently hard-coded for English: “Cancel” */
 			}
-			<button data-close-modal class="flex md:hidden">
+			<button data-close-modal class="sl-flex md:sl-hidden">
 				{t('search.cancelLabel')}
 			</button>
 			{
