--- a/packages/starlight/components/Badge.astro
+++ b/packages/starlight/components/Badge.astro
@@ -1,12 +1,13 @@
 ---
 interface Props {
 	theme?: 'blue' | 'pink' | 'green' | 'yellow' | 'purple';
+	text: string;
 }
-const { theme = 'blue' } = Astro.props;
+const { theme = 'blue', text } = Astro.props;
 ---
 
 <span class={theme}>
-	<slot />
+	{text}
 </span>
 <style>
 	span {
