--- a/packages/starlight/components/Badge.astro
+++ b/packages/starlight/components/Badge.astro
@@ -60,27 +60,27 @@ const { theme = 'blue', text } = Astro.props;
 		--sl-color-border-badge: hsla(281, 90%, 60%, 1);
 	}
 
-	::global([data-theme='dark']) span.blue {
+	:global([data-theme='dark']) span.blue {
 		--sl-color-bg-badge: hsla(234, 54%, 20%, 1);
 		--sl-color-border-badge: hsla(234, 100%, 60%, 1);
 	}
 
-	::global([data-theme='dark']) span.pink {
+	:global([data-theme='dark']) span.pink {
 		--sl-color-bg-badge: hsla(339, 39%, 22%, 1);
 		--sl-color-border-badge: hsla(339, 82%, 63%, 1);
 	}
 
-	::global([data-theme='dark']) span.green {
+	:global([data-theme='dark']) span.green {
 		--sl-color-bg-badge: hsla(102, 39%, 22%, 1);
 		--sl-color-border-badge: hsla(101, 82%, 63%, 1);
 	}
 
-	::global([data-theme='dark']) span.yellow {
+	:global([data-theme='dark']) span.yellow {
 		--sl-color-bg-badge: hsla(40, 39%, 22%, 1);
 		--sl-color-border-badge: hsla(41, 82%, 63%, 1);
 	}
 
-	::global([data-theme='dark']) span.purple {
+	:global([data-theme='dark']) span.purple {
 		--sl-color-bg-badge: hsla(280, 39%, 22%, 1);
 		--sl-color-border-badge: hsla(281, 82%, 63%, 1);
 	}
