--- a/packages/starlight/components/Banner.astro
+++ b/packages/starlight/components/Banner.astro
@@ -8,13 +8,15 @@ interface Props {
 
 <style>
   .sl-banner {
+    --__sl-banner-text: var(--sl-color-banner-text, var(--sl-color-text-invert));
     padding: var(--sl-nav-pad-y) var(--sl-nav-pad-x);
     background-color: var(--sl-color-banner-bg, var(--sl-color-bg-accent));
-    color: var(--sl-color-text-invert);
+    color: var(--__sl-banner-text);
     line-height: var(--sl-line-height-headings);
     text-align: center;
+    box-shadow: var(--sl-shadow-sm);
   }
   .sl-banner :global(a) {
-    color: var(--sl-color-text-invert);
+    color: var(--__sl-banner-text);
   }
 </style>
