--- a/packages/starlight/components/SidebarSublist.astro
+++ b/packages/starlight/components/SidebarSublist.astro
@@ -1,7 +1,7 @@
 ---
 import { flattenSidebar, type SidebarEntry } from '../utils/navigation';
 import Icon from '../user-components/Icon.astro';
-import Badge from './Badge.astro';
+import Badge from '../user-components/Badge.astro';
 
 interface Props {
 	sublist: SidebarEntry[];
@@ -20,7 +20,7 @@ interface Props {
 						class:list={{ large: !Astro.props.nested }}
 					>
 						{entry.label}
-						{entry.badge && <Badge theme={entry.badge.variant} text={entry.badge.text} />}
+						{entry.badge && <Badge {...entry.badge} />}
 					</a>
 				) : (
 					<details
