--- a/packages/starlight/user-components/Badge.astro
+++ b/packages/starlight/user-components/Badge.astro
@@ -2,27 +2,34 @@
 import type { Badge } from '../schemas/badge';
 
 interface Props {
-	variant: Badge['variant'];
-	text: string;
+	variant?: Badge['variant'];
+	text?: string;
 }
-const { variant, text } = Astro.props;
+const { variant = 'default', text } = Astro.props;
 ---
 
-<span class:list={['sl-badge', variant]}>{text}</span>
+<span class:list={['sl-badge', variant]}>{
+	Astro.slots.has('default') ? <slot /> : text
+}</span>
 
 <style>
 	.sl-badge {
-		padding-inline: 0.375rem;
-		padding-block: 0.0625rem;
+		display: inline-block;
 		border-radius: 0.25rem;
 		font-family: var(--sl-font-system-mono);
-		margin-inline-start: 0.125rem;
-		font-size: var(--sl-text-xs);
+		padding: 0.375rem;
+		line-height: 100%;
 		border: 1px solid;
 		font-weight: normal;
 		color: var(--sl-color-text-badge);
 		background-color: var(--sl-color-bg-badge);
 		border-color: var(--sl-color-border-badge);
+	}
+
+	:global(#starlight__sidebar) .sl-badge {
+		padding-block: 0.125rem;
+		padding-inline: 0.375rem;
+		font-size: var(--sl-text-xs);
 	}
 
 	.default {
