--- a/packages/starlight/components/Banner.astro
+++ b/packages/starlight/components/Banner.astro
@@ -14,6 +14,7 @@ interface Props {
     color: var(--__sl-banner-text);
     line-height: var(--sl-line-height-headings);
     text-align: center;
+    text-wrap: balance;
     box-shadow: var(--sl-shadow-sm);
   }
   .sl-banner :global(a) {
