--- a/packages/starlight/components/SidebarSublist.astro
+++ b/packages/starlight/components/SidebarSublist.astro
@@ -19,7 +19,7 @@ interface Props {
 						aria-current={entry.isCurrent && 'page'}
 						class:list={{ large: !Astro.props.nested }}
 					>
-						{entry.label}
+						<span>{entry.label}</span>
 						{entry.badge && <Badge {...entry.badge} />}
 					</a>
 				) : (
@@ -104,6 +104,10 @@ interface Props {
 		font-weight: 600;
 		color: var(--sl-color-text-invert);
 		background-color: var(--sl-color-text-accent);
+	}
+
+	a > *:not(:last-child) {
+		margin-inline-end: 0.25em;
 	}
 
 	@media (min-width: 50rem) {
