--- a/packages/starlight/components/Badge.astro
+++ b/packages/starlight/components/Badge.astro
@@ -8,97 +8,79 @@ interface Props {
 const { variant = 'default', text } = Astro.props;
 ---
 
-<span class:list={['sl-badge', variant]}>{
-	Astro.slots.has('default') ? <slot /> : text
-}</span>
+<span class:list={['sl-badge', variant]} set:html={text} />
 
 <style>
 	.sl-badge {
 		display: inline-block;
+		border: 1px solid var(--sl-color-border-badge);
 		border-radius: 0.25rem;
 		font-family: var(--sl-font-system-mono);
-		padding: 0.375rem;
-		line-height: 100%;
-		border: 1px solid;
-		font-weight: normal;
-		color: var(--sl-color-text-badge);
-		background-color: var(--sl-color-bg-badge);
-		border-color: var(--sl-color-border-badge);
-	}
-
-	:global(#starlight__sidebar) .sl-badge {
-		padding-block: 0.125rem;
-		padding-inline: 0.375rem;
 		font-size: var(--sl-text-xs);
-	}
-
-	.default {
-		--sl-color-text-badge: var(--sl-color-text-invert);
-		--sl-color-bg-badge: var(--sl-color-text-accent);
-		--sl-color-border-badge: var(--sl-color-text-accent);
+		font-weight: 400;
+		padding: 0.125rem 0.375rem;
+		line-height: 1;
+		color: #fff;
+		background-color: var(--sl-color-bg-badge);
 	}
 
 	:global([aria-current='page']) .sl-badge {
-		background-color: var(--sl-color-text-accent);
-		border-color: var(--sl-color-text-invert);
-		color: var(--sl-color-text-invert);
+		background-color: transparent;
+		border-color: currentColor;
+		color: inherit;
 	}
 
-	.blue,
-	.pink,
-	.green,
-	.yellow,
-	.purple {
-		--sl-color-text-badge: #fff;
+	.default {
+		--sl-color-bg-badge: var(--sl-color-accent-low);
+		--sl-color-border-badge: var(--sl-color-accent);
 	}
 
 	.blue {
-		--sl-color-bg-badge: hsla(234, 80%, 30%, 1);
-		--sl-color-border-badge: hsla(234, 90%, 60%, 1);
-	}
-
-	.pink {
-		--sl-color-bg-badge: hsla(339, 80%, 30%, 1);
-		--sl-color-border-badge: hsla(339, 90%, 60%, 1);
-	}
-
-	.green {
-		--sl-color-bg-badge: hsla(102, 80%, 22%, 1);
-		--sl-color-border-badge: hsla(101, 90%, 46%, 1);
-	}
-
-	.yellow {
-		--sl-color-bg-badge: hsla(40, 80%, 25%, 1);
-		--sl-color-border-badge: hsla(41, 90%, 60%, 1);
-	}
-
-	.purple {
-		--sl-color-bg-badge: hsla(280, 90%, 30%, 1);
-		--sl-color-border-badge: hsla(281, 90%, 60%, 1);
-	}
-
-	:global([data-theme='dark']) .blue {
 		--sl-color-bg-badge: var(--sl-color-blue-low);
 		--sl-color-border-badge: var(--sl-color-blue);
 	}
 
-	:global([data-theme='dark']) .pink {
+	.pink {
 		--sl-color-bg-badge: var(--sl-color-red-low);
-		--sl-color-border-badge: var(--sl-color-red));
+		--sl-color-border-badge: var(--sl-color-red);
 	}
 
-	:global([data-theme='dark']) .green {
-		--sl-color-bg-badge: hsla(102, 39%, 22%, 1);
-		--sl-color-border-badge: hsla(101, 82%, 63%, 1);
+	.green {
+		--sl-color-bg-badge: var(--sl-color-green-low);
+		--sl-color-border-badge: var(--sl-color-green);
 	}
 
-	:global([data-theme='dark']) .yellow {
+	.yellow {
 		--sl-color-bg-badge: var(--sl-color-orange-low);
 		--sl-color-border-badge: var(--sl-color-orange);
 	}
 
-	:global([data-theme='dark']) .purple {
+	.purple {
 		--sl-color-bg-badge: var(--sl-color-purple-low);
 		--sl-color-border-badge: var(--sl-color-purple);
+	}
+
+	:global([data-theme='light']) .default {
+		--sl-color-bg-badge: var(--sl-color-accent-high);
+	}
+
+	:global([data-theme='light']) .blue {
+		--sl-color-bg-badge: var(--sl-color-blue-high);
+	}
+
+	:global([data-theme='light']) .pink {
+		--sl-color-bg-badge: var(--sl-color-red-high);
+	}
+
+	:global([data-theme='light']) .green {
+		--sl-color-bg-badge: var(--sl-color-green-high);
+	}
+
+	:global([data-theme='light']) .yellow {
+		--sl-color-bg-badge: var(--sl-color-orange-high);
+	}
+
+	:global([data-theme='light']) .purple {
+		--sl-color-bg-badge: var(--sl-color-purple-high);
 	}
 </style>
