--- a/packages/starlight/components/MobileMenuToggle.astro
+++ b/packages/starlight/components/MobileMenuToggle.astro
@@ -2,7 +2,7 @@
 import Icon from '../user-components/Icon.astro';
 import { useTranslations } from '../utils/translations';
 
-interface Props {
+export interface Props {
 	locale: string | undefined;
 }
 
