--- a/packages/starlight/components/ThemeSelect.astro
+++ b/packages/starlight/components/ThemeSelect.astro
@@ -2,7 +2,7 @@
 import { useTranslations } from '../utils/translations';
 import Select from './Select.astro';
 
-interface Props {
+export interface Props {
 	locale: string | undefined;
 }
 
