--- a/packages/starlight/components/Badge.astro
+++ b/packages/starlight/components/Badge.astro
@@ -1,7 +1,7 @@
 ---
 import type { Badge } from '../schemas/badge';
 
-interface Props {
+export interface Props {
 	variant?: Badge['variant'] | 'outline';
 	text?: string;
 }
