--- a/packages/starlight/components/HeadSEO.astro
+++ b/packages/starlight/components/HeadSEO.astro
@@ -7,7 +7,7 @@ import { localizedUrl } from '../utils/localizedUrl';
 import { fileWithBase } from '../utils/base';
 import { version } from '../package.json';
 
-interface Props {
+export interface Props {
 	data: CollectionEntry<'docs'>['data'];
 	lang: string;
 }
