--- a/packages/starlight/components/Hero.astro
+++ b/packages/starlight/components/Hero.astro
@@ -3,7 +3,7 @@ import type { CollectionEntry } from 'astro:content';
 import { Image } from 'astro:assets';
 import CallToAction from './CallToAction.astro';
 
-interface Props {
+export interface Props {
 	fallbackTitle: string;
 	hero: NonNullable<CollectionEntry<'docs'>['data']['hero']>;
 }
