--- a/packages/starlight/components/LanguageSelect.astro
+++ b/packages/starlight/components/LanguageSelect.astro
@@ -4,7 +4,7 @@ import { localizedUrl } from '../utils/localizedUrl';
 import { useTranslations } from '../utils/translations';
 import Select from './Select.astro';
 
-interface Props {
+export interface Props {
 	locale: string | undefined;
 }
 
