--- a/packages/starlight/components/TableOfContents/MobileTableOfContents.astro
+++ b/packages/starlight/components/TableOfContents/MobileTableOfContents.astro
@@ -4,7 +4,7 @@ import Icon from '../../user-components/Icon.astro';
 import TableOfContentsList from './TableOfContentsList.astro';
 import type { TocItem } from './generateToC';
 
-interface Props {
+export interface Props {
 	toc: TocItem[];
 	locale: string | undefined;
 	maxHeadingLevel: number;
