--- a/packages/starlight/components/Search.astro
+++ b/packages/starlight/components/Search.astro
@@ -110,7 +110,7 @@ const pagefindTranslations = {
 					new PagefindUI({
 						element: '#starlight__search',
 						baseUrl: import.meta.env.BASE_URL,
-						bundlePath: import.meta.env.BASE_URL.replace(/\/$/, '') + '/_pagefind/',
+						bundlePath: import.meta.env.BASE_URL.replace(/\/$/, '') + '/pagefind/',
 						showImages: false,
 						translations,
 					});
