Refactor to recalculate root margin on window resize

--- a/packages/starlight/components/TableOfContents/MobileTableOfContents.astro
+++ b/packages/starlight/components/TableOfContents/MobileTableOfContents.astro
@@ -122,7 +122,7 @@ const t = useTranslations(locale);
 		}
 
 		constructor() {
-			super({ smallViewport: true });
+			super();
 			const details = this.querySelector('details');
 			if (!details) return;
 			const closeToC = () => {
