--- a/packages/starlight/layout/Page.astro
+++ b/packages/starlight/layout/Page.astro
@@ -1,6 +1,8 @@
 ---
 import config from 'virtual:starlight/user-config';
 import type { MarkdownHeading } from 'astro';
+import { ViewTransitions } from 'astro:transitions';
+
 import { getSidebar } from '../utils/navigation';
 import type { Route } from '../utils/routing';
 
@@ -84,6 +86,7 @@ const pagefindEnabled =
 				}
 			}
 		</style>
+		{ entry.data.viewTransitions && <ViewTransitions /> }
 	</head>
 	<body>
 		<ThemeProvider />
