feat: view transition in user config

--- a/packages/starlight/layout/Page.astro
+++ b/packages/starlight/layout/Page.astro
@@ -86,7 +86,7 @@ const pagefindEnabled =
 				}
 			}
 		</style>
-		{ entry.data.viewTransitions && <ViewTransitions /> }
+		{ config.viewTransitions && <ViewTransitions /> }
 	</head>
 	<body>
 		<ThemeProvider />
