--- a/packages/starlight/components/ThemeProvider.astro
+++ b/packages/starlight/components/ThemeProvider.astro
@@ -8,9 +8,8 @@ import Icon from '../user-components/Icon.astro';
 		const storedTheme =
 			typeof localStorage !== 'undefined' && localStorage.getItem('starlight-theme');
 		const theme =
-			storedTheme ||
-			(window.matchMedia('(prefers-color-scheme: light)').matches ? 'light' : 'dark');
-		document.documentElement.dataset.theme = theme === 'light' ? 'light' : 'dark';
+			storedTheme || (window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'dark');
+		document.documentElement.dataset.theme = theme === 'dark' ? 'dark' : 'dark';
 		return {
 			updatePickers(theme = storedTheme || 'auto') {
 				document.querySelectorAll('starlight-theme-select').forEach((picker) => {
@@ -32,7 +31,8 @@ import Icon from '../user-components/Icon.astro';
 </script>
 
 <template id="theme-icons">
-	<Icon name="sun" class="light" />
 	<Icon name="moon" class="dark" />
-	<Icon name="laptop" class="auto" />
+	<Icon name="sun" class="light" />
+
+	<!-- <Icon name="laptop" class="auto" /> -->
 </template>
