Fix missing defaults in `404.astro`

--- a/packages/starlight/404.astro
+++ b/packages/starlight/404.astro
@@ -24,6 +24,8 @@ const fallbackEntry: StarlightDocsEntry = {
 		editUrl: false,
 		head: [],
 		hero: { tagline: t('404.text'), actions: [] },
+		pagefind: false,
+		sidebar: { hidden: false },
 	},
 	render: async () => ({
 		Content: EmptyContent,
