Revert "Export Prop types from components"
This reverts commit 58f893f0c455a88e65a768d6f0f85d5e5c7994d4.

--- a/packages/starlight/components/Badge.astro
+++ b/packages/starlight/components/Badge.astro
@@ -1,7 +1,7 @@
 ---
 import type { Badge } from '../schemas/badge';
 
-export interface Props {
+interface Props {
 	variant?: Badge['variant'] | 'outline';
 	text?: string;
 }
