--- a/packages/starlight/components/SkipLink.astro
+++ b/packages/starlight/components/SkipLink.astro
@@ -1,7 +1,7 @@
 ---
 import { useTranslations } from '../utils/translations';
 
-export interface Props {
+interface Props {
 	locale: string | undefined;
 }
 
