--- a/packages/starlight/components/TableOfContents/TableOfContentsList.astro
+++ b/packages/starlight/components/TableOfContents/TableOfContentsList.astro
@@ -1,7 +1,7 @@
 ---
 import type { TocItem } from './generateToC';
 
-export interface Props {
+interface Props {
 	toc: TocItem[];
 	depth?: number;
 	isMobile?: boolean;
