--- a/packages/starlight/components/FallbackContentNotice.astro
+++ b/packages/starlight/components/FallbackContentNotice.astro
@@ -2,7 +2,7 @@
 import { useTranslations } from '../utils/translations';
 import Icon from '../user-components/Icon.astro';
 
-export interface Props {
+interface Props {
 	locale: string | undefined;
 }
 
