--- a/packages/starlight/components/Footer.astro
+++ b/packages/starlight/components/Footer.astro
@@ -8,7 +8,7 @@ import LastUpdated from '../components/LastUpdated.astro';
 import PrevNextLinks from '../components/PrevNextLinks.astro';
 import EditLink from './EditLink.astro';
 
-export interface Props extends LocaleData {
+interface Props extends LocaleData {
 	entry: StarlightDocsEntry;
 	sidebar: SidebarEntry[];
 }
