--- a/packages/starlight/components/Header.astro
+++ b/packages/starlight/components/Header.astro
@@ -5,7 +5,7 @@ import SiteTitle from './SiteTitle.astro';
 import SocialIcons from './SocialIcons.astro';
 import ThemeSelect from './ThemeSelect.astro';
 
-export interface Props {
+interface Props {
 	locale: string | undefined;
 }
 
