--- a/packages/starlight/components/Search.astro
+++ b/packages/starlight/components/Search.astro
@@ -3,7 +3,7 @@ import '@pagefind/default-ui/css/ui.css';
 import { useTranslations } from '../utils/translations';
 import Icon from '../user-components/Icon.astro';
 
-export interface Props {
+interface Props {
 	locale: string | undefined;
 }
 
