--- a/packages/starlight/components/Select.astro
+++ b/packages/starlight/components/Select.astro
@@ -1,7 +1,7 @@
 ---
 import Icon from '../user-components/Icon.astro';
 
-export interface Props {
+interface Props {
 	label: string;
 	value: string;
 	icon: Parameters<typeof Icon>[0]['name'];
