--- a/packages/starlight/components/Sidebar.astro
+++ b/packages/starlight/components/Sidebar.astro
@@ -4,7 +4,7 @@ import LanguageSelect from './LanguageSelect.astro';
 import SidebarSublist from './SidebarSublist.astro';
 import ThemeSelect from './ThemeSelect.astro';
 
-export interface Props {
+interface Props {
 	sidebar: ReturnType<typeof getSidebar>;
 	locale: string | undefined;
 }
