--- a/packages/starlight/components/SidebarSublist.astro
+++ b/packages/starlight/components/SidebarSublist.astro
@@ -3,7 +3,7 @@ import { flattenSidebar, type SidebarEntry } from '../utils/navigation';
 import Icon from '../user-components/Icon.astro';
 import Badge from './Badge.astro';
 
-export interface Props {
+interface Props {
 	sublist: SidebarEntry[];
 	nested?: boolean;
 }
