--- a/packages/starlight/components/TableOfContents.astro
+++ b/packages/starlight/components/TableOfContents.astro
@@ -3,7 +3,7 @@ import { useTranslations } from '../utils/translations';
 import TableOfContentsList from './TableOfContents/TableOfContentsList.astro';
 import type { TocItem } from './TableOfContents/generateToC';
 
-export interface Props {
+interface Props {
 	toc: TocItem[];
 	locale: string | undefined;
 	maxHeadingLevel: number;
